--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8080
+  port: ${APP_PORT}
   servlet:
     context-path: "/api/v1"
 
 spring:
   application:
-    name: MiniMart API
+    name: ${APP_NAME}
   datasource:
-    url: ${DATASOURCE_URL}
+    url: ${DATABASE_URL}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -17,3 +17,10 @@ spring:
       ddl-auto: create-drop
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  config:
+    import: optional:file:.env
+
+  security:
+    user:
+      name: admin
+      password: admin
