--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
 
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
@@ -43,3 +43,9 @@ spring:
         s3:
           region: ${AWS_S3_REGION}
           bucket: ${AWS_S3_BUCKET}
+
+  xendit:
+    secret-key: ${XENDIT_SECRET_KEY}
+    redirect:
+      success-url: http://localhost:8080/api/v1/webhook/payment
+      failure-url: http://localhost:8080/api/v1/webhook/payment/failure
