--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,9 @@ spring:
 
   xendit:
     secret-key: ${XENDIT_SECRET_KEY}
+    webhook-verification-token: ${XENDIT_VERIFICATION_TOKEN}
     redirect:
       success-url: http://localhost:8080/api/v1/webhook/payment
       failure-url: http://localhost:8080/api/v1/webhook/payment/failure
+  jackson:
+    property-naming-strategy: SNAKE_CASE
