--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,25 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.github.bastiaanjansen</groupId>
+			<artifactId>otp-java</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.mailtrap</groupId>
+			<artifactId>mailtrap-java</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.24.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
@@ -41,7 +60,6 @@
 			<artifactId>xendit-java-lib</artifactId>
 			<version>1.21.0</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
@@ -99,6 +117,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
