feat(rate-limiting): integrate Bucket4j with Redisson Redis cache and property-based config

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,19 @@
 			<version>2.1.0</version>
 		</dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
+            <artifactId>bucket4j-spring-boot-starter</artifactId>
+            <version>0.13.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.17.0</version>
+        </dependency>
+
+        <dependency>
 			<groupId>io.mailtrap</groupId>
 			<artifactId>mailtrap-java</artifactId>
 			<version>1.0.0</version>
@@ -174,6 +186,7 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -188,6 +201,9 @@
 							<artifactId>mapstruct-processor</artifactId>
 							<version>1.5.5.Final</version>
 						</path>
+                        <compilerArgs>
+                            <arg>-parameters</arg>
+                        </compilerArgs>
 					</annotationProcessorPaths>
 
 				</configuration>
