--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,3 +78,46 @@ spring:
   totp:
     global-secret: ${TOTP_GLOBAL_SECRET}
     expiration-in-minutes: ${TOTP_EXPIRY_IN_MINUTES}
+
+bucket4j:
+  key-prefix: "buckets"
+  redis-address: redis://localhost:6379
+  enabled: true
+  filters:
+    - cache-name: auth
+      url: .*/auth/register
+      rate-limits:
+        - cache-key: getRemoteAddr()
+          bandwidths:
+            - capacity: 5
+              initial-capacity: 10
+              time: 30
+              unit: seconds
+              refill-speed: interval
+              refill-capacity: 2
+
+    - cache-name: auth
+      url: .*/auth/login
+      rate-limits:
+        - cache-key: getRemoteAddr()
+          bandwidths:
+            - capacity: 5
+              initial-capacity: 10
+              time: 30
+              unit: seconds
+              refill-speed: interval
+              refill-capacity: 2
+
+    - cache-name: auth
+      url: .*/auth/me
+      filter-order: 150
+      rate-limits:
+        - cache-key: "@securityService.username()"
+          bandwidths:
+            - capacity: 5
+              initial-capacity: 10
+              time: 30
+              unit: seconds
+              refill-speed: interval
+              refill-capacity: 2
+      http-content-type: application/json
