feat(docs): integrate Swagger/OpenAPI with global config, JWT auth, and reusable error response annotations

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -131,3 +131,11 @@ bucket4j:
               refill-speed: interval
               refill-capacity: 2
       http-content-type: application/json
+
+springdoc:
+  api-docs:
+    path: /api-docs
+
+  swagger-ui:
+    path: /swagger-ui.html
+    url: /api-docs
