feat(flyway): add database migration setup for dev and prod with Docker

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,4 +1,4 @@
-FROM openjdk:24-bullseye
+FROM openjdk:21-jdk
 
 # Copy jar
 ARG JAR_FILE=target/*.jar
@@ -7,4 +7,4 @@ COPY ${JAR_FILE} app.jar
 COPY .env.dev .
 
 # Correct ENTRYPOINT with separated arguments
-ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "--sun-misc-unsafe-memory-access=allow","-jar", "/app.jar", "--spring.profiles.active=dev"]
+ENTRYPOINT ["java","-jar", "/app.jar", "--spring.profiles.active=dev"]
