--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,16 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>24</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+
+
+        <dependency>
+            <groupId>com.github.bastiaanjansen</groupId>
+            <artifactId>otp-java</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -37,22 +44,16 @@
             <version>2.8.9</version>
         </dependency>
 
-		<dependency>
-			<groupId>com.github.bastiaanjansen</groupId>
-			<artifactId>otp-java</artifactId>
-			<version>2.1.0</version>
-		</dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.50.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.giffing.bucket4j.spring.boot.starter</groupId>
             <artifactId>bucket4j-spring-boot-starter</artifactId>
             <version>0.13.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.17.0</version>
         </dependency>
 
         <dependency>
@@ -72,6 +73,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>11.3.4</version>
+        </dependency>
 
 		<dependency>
 			<groupId>com.xendit</groupId>
@@ -189,20 +196,41 @@
 		</dependency>
 	</dependencies>
 
+    <profiles>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring-boot.run.profiles>local</spring-boot.run.profiles>
+                <spring.profiles.active>local</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <spring-boot.run.profiles>dev</spring-boot.run.profiles>
+                <spring.profiles.active>dev</spring.profiles.active>
+                <flyway.enabled>false</flyway.enabled>
+            </properties>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <spring-boot.run.profiles>prod</spring-boot.run.profiles>
+                <spring.profiles.active>prod</spring.profiles.active>
+            </properties>
+        </profile>
+    </profiles>
+
 	<build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 
 				<configuration>
-
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -214,41 +242,12 @@
 							<version>1.5.5.Final</version>
 						</path>
 					</annotationProcessorPaths>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
-				</configuration>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-                    <profiles>
-                        <profile>
-                            <id>local</id>
-                            <activation>
-                                <activeByDefault>true</activeByDefault>
-                            </activation>
-                            <properties>
-                                <spring-boot.run.profiles>local</spring-boot.run.profiles>
-                                <spring.profiles.active>local</spring.profiles.active>
-                            </properties>
-                        </profile>
-                        <profile>
-                            <id>dev</id>
-                            <properties>
-                                <spring-boot.run.profiles>dev</spring-boot.run.profiles>
-                                <spring.profiles.active>dev</spring.profiles.active>
-                            </properties>
-                        </profile>
-                        <profile>
-                            <id>prod</id>
-                            <properties>
-                                <spring-boot.run.profiles>prod</spring-boot.run.profiles>
-                                <spring.profiles.active>prod</spring.profiles.active>
-                            </properties>
-                        </profile>
-                    </profiles>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
