refactor(docker): reorganize Dockerfiles and Compose for env-specific setups

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,9 +6,13 @@ services:
       context: .
       dockerfile: Dockerfile-dev
     ports:
-      - "8080:${APP_PORT}"
+      - "${APP_PORT}:${APP_PORT}"
     networks:
       - minimart_network
     depends_on:
       - db
       - redis
+
+networks:
+  minimart_network:
+    external: true
