Modify test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,10 @@ on:
   push:
     branches:
       - github-workflows-test
+
 jobs:
   vps_connection_test:
-    name: Vps Connection Test
+    name: VPS Connection Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -13,9 +14,8 @@ jobs:
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
-            ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
 
       - name: SSH Connection Test
         run: |
-            ssh -o StrictHostKeyChecking=no -p  ${{ secrets.VPS_SSH_PORT }}  ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'echo "Connected!"'
-
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_SSH_PORT }} ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'echo "Connected!"'
