--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,9 +35,19 @@ jobs:
         run: mvn clean compile -Ptest
 
   test:
-    name: Run Tests
+    name: Run Test
     runs-on: ubuntu-latest
     needs: compile
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -48,6 +58,14 @@ jobs:
           java-version: 21
           distribution: temurin
           cache: maven
+
+      - name: Wait for Redis
+        run: |
+          for i in {1..10}; do
+            (echo PING | nc 127.0.0.1 6379 | grep PONG) && break
+            echo "Waiting for Redis..."
+            sleep 3
+          done
 
       - name: Run Tests (Test Profile)
         run: mvn test -Ptest
