--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,11 +61,11 @@ jobs:
 
       - name: Wait for Redis
         run: |
-          for i in {1..10}; do
-            (echo PING | nc 127.0.0.1 6379 | grep PONG) && break
-            echo "Waiting for Redis..."
-            sleep 3
-          done
+            for i in {1..10}; do
+              (echo PING | nc redis 6379 | grep PONG) && break
+              echo "Waiting for Redis..."
+              sleep 3
+            done
 
       - name: Run Tests (Test Profile)
         run: mvn test -Ptest
