--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,12 +62,16 @@ jobs:
       - name: Wait for Redis
         run: |
             for i in {1..10}; do
-              (echo PING | nc redis 6379 | grep PONG) && break
+              redis-cli -h redis ping && echo "Redis is up!" && break
               echo "Waiting for Redis..."
               sleep 3
             done
 
       - name: Run Tests (Test Profile)
+        env:
+          REDIS_HOST: redis
+          REDIS_PORT: 6379
+          REDIS_ADDRESS: redis://redis:6379
         run: mvn test -Ptest
 
   deploy:
