--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,8 @@ jobs:
           distribution: temurin
           cache: maven
 
-      - name: Run Compile (Test Profile)
-        run: mvn clean compile -Ptest
+      - name: Run Compile
+        run: mvn clean compile
 
   test:
     name: Run Test
@@ -63,7 +63,7 @@ jobs:
         run: mvn test -Ptest
 
   deploy:
-    name: Fake Deploy
+    name: Deploy (Development)
     runs-on: ubuntu-latest
     needs:
       - test
@@ -77,7 +77,7 @@ jobs:
           ssh-private-key: ${{ secrets.VPS_SSH_KEY }}
           log-public-key: false
 
-      - name: Deploy App
+      - name: Deploy (Development Profile)
         run: |
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.VPS_SSH_PORT }} \
             ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'echo "App Deployed!"'
