--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,6 +80,7 @@ jobs:
   compile:
     name: Compile
     runs-on: ubuntu-latest
+    needs: create-env
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -126,8 +127,7 @@ jobs:
     name: Build Docker Image (Development)
     runs-on: ubuntu-latest
     environment: dev
-    needs:
-      - test
+    needs: [create-env, test]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -141,7 +141,7 @@ jobs:
       - name: Login Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Set up Docker Buildx
@@ -169,8 +169,7 @@ jobs:
   deploy:
     name: Deploy (Development)
     runs-on: ubuntu-latest
-    needs:
-      - build
+    needs: [create-env, build]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
