--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.tamamhuda</groupId>
 	<artifactId>minimart-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>MiniMart API</name>
 	<description>E-commerce backend with Spring Boot Essentials</description>
 	<url/>
