Test Deploy Docker Image in CI Pipeline Test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -210,10 +210,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_SSH_PORT }}
-          source: |
-            docker-compose.yml
-            docker-compose.prod.yml
-            .env.${{ vars.SPRING_PROFILES_ACTIVE }}
+          source: "docker-compose.yml,docker-compose.prod.yml,.env.${{ vars.SPRING_PROFILES_ACTIVE }}"
           target: ~/minimart-api/
 
       - name: Deploy
