--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -193,6 +193,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     needs: [ create-env, build ]
+    env:
+      IMAGE: ${{ needs.build.outputs.image-tag }}
+      PROFILE: ${{ vars.SPRING_PROFILES_ACTIVE }}
+      DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
+      DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
     steps:
       - name: Checkout
@@ -215,11 +220,6 @@ jobs:
 
       - name: Deploy
         uses: appleboy/ssh-action@v1
-        env:
-          IMAGE: ${{ env.IMAGE }}
-          PROFILE: ${{ env.PROFILE }}
-          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
-          DOCKER_TOKEN: ${{ env.DOCKER_TOKEN }}
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
