Test Deploy Docker Image in CI Pipeline Test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -194,7 +194,7 @@ jobs:
     environment: dev
     needs: [ create-env, build ]
     env:
-      IMAGE: ${{ needs.build.outputs.image-tag }}
+      APP_IMAGE: ${{ needs.build.outputs.image-tag }}
       PROFILE: ${{ vars.SPRING_PROFILES_ACTIVE }}
       DOCKER_USERNAME: ${{ vars.DOCKER_USERNAME }}
       DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
@@ -225,7 +225,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_SSH_PORT }}
-          envs: IMAGE,PROFILE,DOCKER_USERNAME,DOCKER_TOKEN
+          envs: APP_IMAGE,PROFILE,DOCKER_USERNAME,DOCKER_TOKEN
           script: |
             cd ~/minimart-api
 
